--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,26 +10,24 @@ dependencies = [
     "numpy>=1.19",
     "sqlalchemy>=2.0",
     "sqlalchemy_utils",
+    "charset_normalizer",    
     "toml",
-    "charset_normalizer",
-    "flask"
 ]
 
 requires-python = ">= 3.9"
 authors = [
     {name = "Matthew Newville", email = "newville@cars.uchicago.edu"},
-    {name = "Chris Skordas", email = "skordas@cars.uchicago.edu},
+    {name = "Chris Skordas", email = "skordas@cars.uchicago.edu"},    
 ]
-
 description = "Archiver for Epics PVs with web display"
 readme = "README.rst"
 license = {file="License"}
 keywords = ["Epics Channel Access"]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
+    "License :: OSI Approved :: MIT License",
     "Intended Audience :: Science/Research",
     "Topic :: Scientific/Engineering",
-    "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3 :: Only",
